--- a/style/cards.css
+++ b/style/cards.css
@@ -11,16 +11,25 @@
 	max-width: 1170px;
 	margin: 2rem auto;
 	display: grid;
+	grid-column-gap: 2rem;
+	grid-template-columns: repeat(auto-fill, minmax(268.5px, 1fr));
 }
 
 .card {
 	border: 1px solid var(--lightGray);
 	margin-bottom: 3rem;
 	transition: var(--mainTransition);
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr auto;
 }
 
 .card-info {
 	padding: 1rem;
+}
+
+.card-text {
+	font-size: 1rem;
 }
 
 .card-footer {
@@ -34,7 +43,7 @@
 .card-footer span {
 	color: var(--primaryColor);
 }
-
+/* 
 @media screen and (min-width: 768px) {
 	.cards-center {
 		display: grid;
@@ -47,4 +56,4 @@
 	.cards-center {
 		grid-template-columns: repeat(3, 1fr);
 	}
-}
+} */
