added variable light gray color

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 	--mainWhite: #fff;
 	--offWhite: #f7f7f7;
 	--darkGray: #afafaf;
+	--lightGray: #dbdbdb;
 	--mainTransition: all 0.3s linear;
 	--mainSpacing: 0.2rem;
 }
